tests/ui/rustdoc/doc_keyword.stderr
error: `#[doc(keyword = "...")]` should be used on empty modules
  --> $DIR/doc_keyword.rs:6:7
   |
LL | #[doc(keyword = "hell")]
   |       ^^^^^^^^^^^^^^^^

error: `#[doc(keyword = "...")]` should be used on modules
  --> $DIR/doc_keyword.rs:11:7
   |
LL | #[doc(keyword = "hall")]
   |       ^^^^^^^^^^^^^^^^

error: nonexistent keyword `tadam` used in `#[doc(keyword = "...")]`
  --> $DIR/doc_keyword.rs:22:17
   |
LL | #[doc(keyword = "tadam")]
   |                 ^^^^^^^
   |
   = help: only existing keywords are allowed in core/std

error: `#[doc(keyword = "...")]` should be used on modules
  --> $DIR/doc_keyword.rs:17:11
   |
LL |     #[doc(keyword = "match")]
   |           ^^^^^^^^^^^^^^^^^

error: `#![doc(keyword = "...")]` isn't allowed as a crate-level attribute
  --> $DIR/doc_keyword.rs:4:8
   |
LL | #![doc(keyword = "hello")]
   |        ^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

